_Source/force-app/main/default/objects/Lead/fields/BI_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>BI_Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the lead comes from an Agency, please select the TCM Contact.</inlineHelpText>
    <label>Agency Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>