_Source/force-app/main/default/objects/Lead/fields/BI_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>BI_Closed_Lost_Reason__c</fullName>
    <description>2019 - 08: BI Release update. Field API name remain as is, however, label is updated to use this field to always denote a status reason, not only when the lead is closed. 

NOTE: changes to any values will require validating / updating Lead Status flows</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>01 PreWork - Researching  (BI / Hoovers / LinkedIn/ Google etc.)</fullName>
                <label>Researching  (BI / Hoovers / LinkedIn/ Google etc.)</label>
            </value>
            <value>
                <fullName>02 PreWork - Establishing Contact  (Reached out / Initial Email sent)</fullName>
                <label>Establishing Contact  (Reached out / Initial Email sent)</label>
            </value>
            <value>
                <fullName>03 PreWork - Establishing Contact (Follow-up Cadence)</fullName>
                <label>Establishing Contact (Follow-up Cadence)</label>
            </value>
            <value>
                <fullName>01 Engaged - Communication Established (Response Received)</fullName>
                <label>Communication Established (Response Received)</label>
            </value>
            <value>
                <fullName>02 Engaged - Person-to-Person meeting / call scheduled</fullName>
                <label>Person-to-Person meeting / call scheduled</label>
            </value>
            <value>
                <fullName>03 Engaged - Nurturing (Additional Interactions to qualify &amp; convert)</fullName>
                <label>Nurturing (Additional Interactions to qualify &amp; convert)</label>
            </value>
            <value>
                <fullName>Closed - Authority</fullName>
            </value>
            <value>
                <fullName>Closed - Competition</fullName>
            </value>
            <value>
                <fullName>Closed - Competition - Loyal to AA/Oneworld</fullName>
            </value>
            <value>
                <fullName>Closed - Competition - Loyal to DL/Skyteam</fullName>
            </value>
            <value>
                <fullName>Closed - Competition - Loyal to Southwest</fullName>
            </value>
            <value>
                <fullName>Closed - Does not Qualify</fullName>
            </value>
            <value>
                <fullName>Closed - Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Closed - Doesn&apos;t spend enough for PassPlus</fullName>
            </value>
            <value>
                <fullName>Closed - Fit</fullName>
            </value>
            <value>
                <fullName>Closed - Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Closed - Prefers to stay on PerksPlus</fullName>
            </value>
            <value>
                <fullName>Closed - Qualifies for PassPlus, not Propel, but unwilling to prepay</fullName>
            </value>
            <value>
                <fullName>Closed - Timing</fullName>
            </value>
            <value>
                <fullName>01 PreWork - Researching (BI / Hoovers / LinkedIn/ Google etc.)</fullName>
                <isActive>false</isActive>
                <label>01 PreWork - Researching (BI / Hoovers / LinkedIn/ Google etc.)</label>
            </value>
            <value>
                <fullName>02 PreWork - Establishing Contact (Reached out / Initial Email sent)</fullName>
                <isActive>false</isActive>
                <label>02 PreWork - Establishing Contact (Reached out / Initial Email sent)</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <isActive>false</isActive>
                <label>AA</label>
            </value>
            <value>
                <fullName>Closed - Price</fullName>
                <isActive>false</isActive>
                <label>Closed - Price</label>
            </value>
            <value>
                <fullName>Closed - Product</fullName>
                <isActive>false</isActive>
                <label>Closed - Product</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Converted</fullName>
                <isActive>false</isActive>
                <label>Converted</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>