_Source/force-app/main/default/objects/Lead/fields/BI_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>BI_Closed_Reason__c</fullName>
    <description>2019 - 08: Field introduced in BI Release for Lead Management Enhancements</description>
    <label>Closing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>