_Source/force-app/main/default/objects/Lead/fields/BI_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>