_Source/force-app/main/default/objects/Lead/fields/BI_Frequent_Flyer__c.field-meta.xml
<CustomField>
    <fullName>BI_Frequent_Flyer__c</fullName>
    <label>Frequent Flyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>