_Source/force-app/main/default/objects/Lead/fields/BI_Influence__c.field-meta.xml
<CustomField>
    <fullName>BI_Influence__c</fullName>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>