_Source/force-app/main/default/objects/Lead/fields/BI_Logged_In_User_Lead__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_In_User_Lead__c</fullName>
    <description>2019 -08 : Lead Management Release. Looks to see if the logged in user is the lead owner. This field is used in Lead Pre-Work Flow to prevent a user from sending emails on behalf / from the lead owner if he/she does not own the lead</description>
    <formula>IF(Owner:User.Id = $User.Id , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>