_Source/force-app/main/default/objects/Lead/fields/BI_Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Country__c</fullName>
    <formula>TEXT(Owner:User.SIP_Country__c)</formula>
    <label>Owner: Country</label>
    <type>Text</type>
</CustomField>