_Source/force-app/main/default/objects/Lead/fields/BI_Owner_Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Sales_Division__c</fullName>
    <formula>TEXT(Owner:User.BI_Objective_Division__c)</formula>
    <inlineHelpText>The lead owner&apos;s Division. If the Lead is owned by a queue, the value will be blank.</inlineHelpText>
    <label>Owner Sales Division</label>
    <type>Text</type>
</CustomField>