_Source/force-app/main/default/objects/Lead/fields/BI_Owner_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Sales_Region__c</fullName>
    <formula>Owner:User.Sales_Region__c</formula>
    <inlineHelpText>The lead owner&apos;s Region. If the Lead is owned by a queue, the value will be blank.</inlineHelpText>
    <label>Owner Sales Region</label>
    <type>Text</type>
</CustomField>