_Source/force-app/main/default/objects/Lead/fields/BI_Perks_Plus_Admin_Tool__c.field-meta.xml
<CustomField>
    <fullName>BI_Perks_Plus_Admin_Tool__c</fullName>
    <defaultValue>&quot;https://uppadmin.ual.com/uppadmin/UPP_Login.aspx?ReturnUrl=%2fuppAdmin%2f&quot;</defaultValue>
    <label>Perks Plus Admin Tool</label>
    <type>Url</type>
</CustomField>