_Source/force-app/main/default/objects/Lead/fields/BI_PP_No_Of_Travelers__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_No_Of_Travelers__c</fullName>
    <label>PassPlus No. Of Travelers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>