_Source/force-app/main/default/objects/Lead/fields/BI_PP_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Promo_Code__c</fullName>
    <description>2019-08: field label updated from &apos;PassPlus Promo Code&apos; to &apos;Promo Code&apos; as part of BI August release. Field name was not changed</description>
    <label>Promo Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>