_Source/force-app/main/default/objects/Lead/fields/BI_Prospect__c.field-meta.xml
<CustomField>
    <fullName>BI_Prospect__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prospect</label>
    <type>Checkbox</type>
</CustomField>