_Source/force-app/main/default/objects/Lead/fields/BI_Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Round_Robin_ID__c</fullName>
    <inlineHelpText>Auto Generated number to route / assign selected leads in a round robin manner</inlineHelpText>
    <label>Round Robin ID</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>