_Source/force-app/main/default/objects/Lead/fields/BI_Source_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_Source_Campaign_ID__c</fullName>
    <label>Source Campaign ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>