_Source/force-app/main/default/objects/Lead/fields/BI_Status_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Status_Last_Modified_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Status Last Modified Date</label>
    <type>DateTime</type>
</CustomField>