_Source/force-app/main/default/objects/Lead/fields/BI_UA_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>BI_UA_Advocacy__c</fullName>
    <label>UA Advocacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>