_Source/force-app/main/default/objects/Lead/fields/SIP_Annual_Air_Travel_Budget__c.field-meta.xml
<CustomField>
    <fullName>SIP_Annual_Air_Travel_Budget__c</fullName>
    <inlineHelpText>Select the appropriate pre-tax amount</inlineHelpText>
    <label>Annual Air Travel Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$25,000 - $50,000 USD</fullName>
            </value>
            <value>
                <fullName>$50,001 - $75,000 USD</fullName>
            </value>
            <value>
                <fullName>$75,001 - $100,000 USD</fullName>
            </value>
            <value>
                <fullName>$100,001 - $300,000 USD</fullName>
            </value>
            <value>
                <fullName>$300,001 - $500,000 USD</fullName>
            </value>
            <value>
                <fullName>$500,001 - $1,000,000 USD</fullName>
            </value>
            <value>
                <fullName>$1,000,001 - $5,000,000 USD</fullName>
            </value>
            <value>
                <fullName>Above $5 Million USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>