_Source/force-app/main/default/objects/Lead/fields/SIP_Avg_Annual_UA_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>SIP_Avg_Annual_UA_Travel_Spend__c</fullName>
    <inlineHelpText>Select the appropriate pre-tax amount</inlineHelpText>
    <label>Avg Annual UA Travel Spend</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than $300,000 USD</fullName>
            </value>
            <value>
                <fullName>$300,001 - $500,000 USD</fullName>
            </value>
            <value>
                <fullName>$500,001 - $1 Million USD</fullName>
            </value>
            <value>
                <fullName>Above $1 Million USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>