_Source/force-app/main/default/objects/Lead/fields/SIP_IATA_ARC_Number__c.field-meta.xml
<CustomField>
    <fullName>SIP_IATA_ARC_Number__c</fullName>
    <externalId>true</externalId>
    <label>IATA/ ARC Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>