_Source/force-app/main/default/objects/Lead/fields/SIP_Interested_Customer_Program__c.field-meta.xml
<CustomField>
    <fullName>SIP_Interested_Customer_Program__c</fullName>
    <inlineHelpText>Determines type of opportunity created when this lead is converted:</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Travel Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>