_Source/force-app/main/default/objects/Lead/fields/SIP_Key_Travel_Markets__c.field-meta.xml
<CustomField>
    <fullName>SIP_Key_Travel_Markets__c</fullName>
    <label>Key Travel Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Central America / South America</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>U.S., Canada, and Caribbean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>