_Source/force-app/main/default/objects/Lead/fields/Sip_Lead_Reprents_PL__c.field-meta.xml
<CustomField>
    <fullName>Sip_Lead_Reprents_PL__c</fullName>
    <description>Allow Sales Manager to determine a lead represents an individual or corporate customer</description>
    <label>Lead Represents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>