_Source/force-app/main/default/objects/Lead/fields/SIP_Lead_represents__c.field-meta.xml
<CustomField>
    <fullName>SIP_Lead_represents__c</fullName>
    <description>It is used to map Jetstream Account corporate type on Account level</description>
    <formula>IF( 
  OR(ISPICKVAL(LeadSource, &quot;United for Business (website - individual)&quot;),
    ISPICKVAL(Sip_Lead_Reprents_PL__c, &quot;Individual&quot;)), 
  &quot;Individual&quot;, 
  &quot;Corporate&quot;)</formula>
    <label>Lead represents (Internal Logic))</label>
    <type>Text</type>
</CustomField>