_Source/force-app/main/default/objects/Lead/recordTypes/BI_Business_Insight_Lead_RecordType.recordType-meta.xml
<RecordType>
    <fullName>BI_Business_Insight_Lead_RecordType</fullName>
    <active>true</active>
    <businessProcess>Business Insight_BI</businessProcess>
    <label>Business Insight Lead RecordType</label>
</RecordType>