_Source/force-app/main/default/objects/Lead/validationRules/BI_ClosedLost_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_ClosedLost_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Closed/Lost&quot;)&amp;&amp; ISBLANK( Text(BI_Closed_Lost_Reason__c) )</errorConditionFormula>
    <errorDisplayField>BI_Closed_Lost_Reason__c</errorDisplayField>
    <errorMessage>You have to specify a Reason when you close a Lead as Lost</errorMessage>
</ValidationRule>