_Source/force-app/main/default/objects/Lead/validationRules/BI_No_Convert_Status_Should_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_No_Convert_Status_Should_Be_Selected</fullName>
    <active>true</active>
    <description>No Convert Status Should be selected by user directly until the lead get converted</description>
    <errorConditionFormula>ISPICKVAL( Status , &apos;Converted&apos;) &amp;&amp; NOT(IsConverted)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Lead record can not Converted directly. Please choose Convert button to Convert the lead.</errorMessage>
</ValidationRule>