_Source/force-app/main/default/objects/Lead/validationRules/PassPlus_Mandotry_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>PassPlus_Mandotry_Fields</fullName>
    <active>true</active>
    <description>All fields are mandatory for PassPlus Lead</description>
    <errorConditionFormula>AND(
  INCLUDES(BI_Interested_Program_Type_s__c, &quot;UnitedPassPlus&quot;), 
  OR(ISBLANK( City ),
     ISBLANK( Email ),
     ISBLANK(PostalCode)  
    )
  )</errorConditionFormula>
    <errorMessage>One or more fields are missing for PassPlus lead. (Street, City, Country, PostalCode and email address)</errorMessage>
</ValidationRule>