_Source/force-app/main/default/objects/Lead/validationRules/Validate_Address_City_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Address_City_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(INCLUDES(BI_Interested_Program_Type_s__c, &quot;UnitedPassPlus&quot;)    , ISBLANK( City ))</errorConditionFormula>
    <errorDisplayField>City</errorDisplayField>
    <errorMessage>City cannot be blank !</errorMessage>
</ValidationRule>