_Source/force-app/main/default/objects/Lead/validationRules/Validate_Address_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Address_Country_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(INCLUDES(BI_Interested_Program_Type_s__c, &quot;UnitedPassPlus&quot;) , ISBLANK(Country))</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country cannot be blank !</errorMessage>
</ValidationRule>