_Source/force-app/main/default/objects/Lead/listViews/APAC_China_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_China_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - China</label>
    <queue>APAC_China</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>