_Source/force-app/main/default/objects/Lead/listViews/APAC_Guam_and_Islands_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Guam_and_Islands_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Guam and Islands</label>
    <queue>APAC_Guam_and_Islands</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>