_Source/force-app/main/default/objects/Lead/listViews/APAC_Japan_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Japan_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Japan</label>
    <queue>APAC_Japan</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>