_Source/force-app/main/default/objects/Lead/listViews/APAC_Korea_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Korea_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Korea</label>
    <queue>APAC_Korea</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>