_Source/force-app/main/default/objects/Lead/listViews/APAC_Macau_Hong_Kong_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Macau_Hong_Kong_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Macau, Hong  Kong</label>
    <queue>APAC_Macau_Hong_Kong</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>