_Source/force-app/main/default/objects/Lead/listViews/APAC_Oceania_Plus_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Oceania_Plus_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Oceania Plus</label>
    <queue>APAC_Oceania_Plus</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>