_Source/force-app/main/default/objects/Lead/listViews/APAC_Offline_Islands_Plus_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Offline_Islands_Plus_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Offline &amp; Islands Plus</label>
    <queue>APAC_Offline_Islands_Plus</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>