_Source/force-app/main/default/objects/Lead/listViews/APAC_Philippines_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Philippines_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Philippines</label>
    <queue>APAC_Philippines</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>