_Source/force-app/main/default/objects/Lead/listViews/APAC_Singapore_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Singapore_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC- Singapore</label>
    <queue>APAC_Singapore</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>