_Source/force-app/main/default/objects/Lead/listViews/APAC_Taiwan_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Taiwan_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Taiwan</label>
    <queue>APAC_Taiwan</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>