_Source/force-app/main/default/objects/Lead/listViews/BI_EMEAI_Belgium_Luxembourg_Lead.listView-meta.xml
<ListView>
    <fullName>BI_EMEAI_Belgium_Luxembourg_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEAI - Belgium, Luxembourg</label>
    <queue>BI_EMEAI_Belgium_Luxembourg</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>