_Source/force-app/main/default/objects/Lead/listViews/BI_EMEAI_France_Monaco_Lead.listView-meta.xml
<ListView>
    <fullName>BI_EMEAI_France_Monaco_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEAI - France, Monaco</label>
    <queue>BI_EMEAI_France_Monaco</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>